results/SpecGenBench/2-shot/log-ConvertToKelvin-2023_11_28_07_55_17.txt
class ConvertToKelvin {
    /*@ public normal_behavior
      @    requires (\forall double celsius; Double.isFinite(celsius));
      @    ensures \result == celsius + 273.15;
      @*/
    public double convertTemperature(double celsius) {
        return celsius + 273.15;
    }
}
/home/max/Documents/JMLGPT/tmp/ConvertToKelvin.java:3: error: variable celsius is already defined in method convertTemperature(double)
      @    requires (\forall double celsius; Double.isFinite(celsius));
                                    ^
1 error

